tests/ui/imports/import-after-macro-expand-4.stderr
error[E0659]: `P` is ambiguous
  --> $DIR/import-after-macro-expand-4.rs:12:22
   |
LL |     pub struct S(Vec<P>);
   |                      ^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `P` could refer to the trait imported here
  --> $DIR/import-after-macro-expand-4.rs:11:9
   |
LL |     use crate::*;
   |         ^^^^^^^^
   = help: consider adding an explicit import of `P` to disambiguate
note: `P` could also refer to the enum imported here
  --> $DIR/import-after-macro-expand-4.rs:11:9
   |
LL |     use crate::*;
   |         ^^^^^^^^
   = help: consider adding an explicit import of `P` to disambiguate

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/import-after-macro-expand-4.rs:12:22
   |
LL |     pub struct S(Vec<P>);
   |                      ^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: `#[warn(bare_trait_objects)]` (part of `#[warn(rust_2021_compatibility)]`) on by default
help: if this is a dyn-compatible trait, use `dyn`
   |
LL |     pub struct S(Vec<dyn P>);
   |                      +++

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/import-after-macro-expand-4.rs:12:22
   |
LL |     pub struct S(Vec<P>);
   |                      ^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: if this is a dyn-compatible trait, use `dyn`
   |
LL |     pub struct S(Vec<dyn P>);
   |                      +++

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/import-after-macro-expand-4.rs:12:22
   |
LL |     pub struct S(Vec<P>);
   |                      ^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: if this is a dyn-compatible trait, use `dyn`
   |
LL |     pub struct S(Vec<dyn P>);
   |                      +++

error[E0277]: the size for values of type `(dyn a::P + 'static)` cannot be known at compilation time
  --> $DIR/import-after-macro-expand-4.rs:12:18
   |
LL |     pub struct S(Vec<P>);
   |                  ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn a::P + 'static)`
note: required by an implicit `Sized` bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error: aborting due to 2 previous errors; 3 warnings emitted

Some errors have detailed explanations: E0277, E0659.
For more information about an error, try `rustc --explain E0277`.
